# foreverbull

./: .dockerignore  .gitignore  .golangci.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.rst  go.mod  go.sum  pyrightconfig.json
client/: Dockerfile  Makefile  baseline_performance.pickle  pyproject.toml  pyproject.toml.orig
client/example_algorithms/: dow_jones.json  foreverbull.yaml  nasdaq.json  omx.json  pyproject.toml
client/example_algorithms/src/example_algorithms/: multistep_with_namespace.py  non_parallel.py  parallel.py
client/example_algorithms/src/example_algorithms/momentum/: macd.py  rsi.py
client/example_algorithms/tests/: multistep_with_namespace_test.py  non_parallel_test.py  parallel_test.py
client/example_algorithms/tests/momentum/: macd_test.py  rsi_test.py
client/examples/: multistep_with_namespace.py
client/foreverbull/: pyproject.toml
client/foreverbull/src/foreverbull/: __init__.py  algorithm.py  data.py  foreverbull.py  gprc_service.py  gprc_servicer.py  interfaces.py  models.py  worker.py
client/foreverbull/src/foreverbull/broker/: __init__.py  backtest.py  finance.py
client/foreverbull/src/foreverbull/broker/storage/: storage.py
client/foreverbull/src/foreverbull/cli/: __init__.py  backtest.py  env.py
client/foreverbull/src/foreverbull/entity/: backtest.py  finance.py  service.py
client/foreverbull/src/foreverbull/pb/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  health_pb2.py  health_pb2.pyi  health_pb2_grpc.py
client/foreverbull/src/foreverbull/pb/backtest/: backtest_pb2.py  backtest_pb2.pyi  backtest_pb2_grpc.py  broker_pb2.py  broker_pb2.pyi  broker_pb2_grpc.py  engine_pb2.py  engine_pb2.pyi  engine_pb2_grpc.py  service_pb2.py
client/foreverbull/src/foreverbull/pb/finance/: finance_pb2.py  finance_pb2.pyi  finance_pb2_grpc.py
client/foreverbull/src/foreverbull/pb/foreverbull/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py
client/foreverbull/src/foreverbull/pb/service/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
client/foreverbull/tests/: conftest.py  data_test.py  foreverbull_test.py  test_algorithm.py  test_data.py  test_grpc_service.py  test_models.py  test_pb_utils.py  test_worker.py  worker_test.py
client/foreverbull/tests/broker/: storage_test.py  test_backtest.py  test_service.py
client/foreverbull/tests/broker/storage/: test_backtest.py  test_storage.py
client/foreverbull/tests/cli/: backtest_test.py  test_backtest.py  test_env.py
client/foreverbull_cli/: pyproject.toml
client/foreverbull_cli/src/foreverbull_cli/: __init__.py  backtest.py  env.py  logger.py  main.py  output.py  strategy.py
client/foreverbull_cli/src/foreverbull_cli/env/: cli.py  environment.py
client/foreverbull_cli/tests/: test_backtest.py  test_env.py
client/foreverbull_cli/tests/env/: test_cli.py  test_environment.py
client/foreverbull_testing/: pyproject.toml
client/foreverbull_testing/src/foreverbull_testing/: backtest.py  data.py  database.py  environment.py  plugin.py
client/foreverbull_testing/tests/: test_data.py
client/foreverbull_zipline/: Dockerfile  pyproject.toml  zipline.Dockerfile  zipline_base.Dockerfile
client/foreverbull_zipline/src/foreverbull_zipline/: __init__.py  __main__.py  engine.py  execution.py  grpc_servicer.py  service.py  servicer.py  session_service.py
client/foreverbull_zipline/src/foreverbull_zipline/data_bundles/: foreverbull.py
client/foreverbull_zipline/tests/: conftest.py  engine_session_test.py  test_engine.py  test_execution.py  test_grpc_servicer.py  test_service.py  test_servicer.py  test_session_service.py
client/python/: baseline_performance.pickle  pyproject.toml  recieved.pkl  zipline.Dockerfile
client/python/._src/foreverbull/: data.py  data_test.py  models.py  pyproject.toml
client/python/._src/foreverbull/cli/: service.py  service_test.py
client/python/._src/foreverbull/entity/: finance.py
client/python/._src/foreverbull/pb/backtest/: backtest_pb2.py  engine_pb2.py
client/python/._src/foreverbull_testing/: pyproject.toml
client/python/._src/foreverbull_zipline/: broker.py  execution.py  execution_test.py
client/python/examples/: non_parallel.py  parallel.py
client/python/src/: conftest.py  integration_test.py
client/python/src/foreverbull/: __init__.py  data.py  data_test.py  foreverbull.py  foreverbull_test.py  models.py  models_test.py  socket.py  worker.py  worker_test.py
client/python/src/foreverbull/broker/: backtest.py  backtest_test.py  http.py  service.py
client/python/src/foreverbull/broker/storage/: backtest.py
client/python/src/foreverbull/cli/: backtest_test.py  conftest.py  env.py
client/python/src/foreverbull/entity/: backtest.py  service.py
client/python/src/foreverbull/pb/: pb_utils.py  pb_utils_test.py
client/python/src/foreverbull/pb/backtest/: backtest_pb2.py  backtest_pb2.pyi  engine_pb2.py  engine_pb2.pyi  service_pb2.py  service_pb2.pyi
client/python/src/foreverbull/pb/finance/: finance_pb2.py  finance_pb2.pyi
client/python/src/foreverbull/pb_gen/: __init__.py  backtest_pb2.py  backtest_pb2.pyi  finance_pb2.py  finance_pb2.pyi  service_pb2.py  service_pb2.pyi
client/python/src/foreverbull_zipline/: broker.py  execution.py  execution_test.py
client/python/src/foreverbull_zipline/data_bundles/: foreverbull.py
client/tests/: broker.py  conftest.py  integration_test.py  test_e2e.py  test_end_to_end.py  test_performance.py  test_testing_plugin.py
client/tests/end_to_end/: conftest.py  multistep_with_namespace.py  multistep_with_namespace_test.py  non_parallel_test.py  parallel_test.py  test_zipline.py
client/tests/example_algorithms/: parallel.py
client/tests/integration/: test_e2e.py  test_testing_plugin.py
(+753 files in other folders)
