[project]
name = "foreverbull"
version = "0.0.0"
dependencies = ["grpcio-tools>=1.66.1", "grpcio-testing>=1.66.1"]

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["pytest-repeat>=0.9.3"]


[tool.rye.workspace]
packages = [
  "foreverbull",
  "foreverbull_testing",
  "foreverbull_zipline",
  "example_algorithms",
]

[tool.ruff.lint]
exclude = ["foreverbull/src/foreverbull/pb/*"]

[tool.ruff.format]
exclude = ["foreverbull/src/foreverbull/pb/*"]

[tool.ruff]
fix = true
target-version = "py311"
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["foreverbull"]

[tool.pytest.ini_options]
testpaths = [
  "foreverbull/tests/",
  "foreverbull_testing/tests/",
  "foreverbull_zipline/tests/",
  "tests/",
]
filterwarnings = "ignore::DeprecationWarning"
