[project]
name = "foreverbull"
version = "0.0.0"
dependencies = ["grpcio>=1.66.1"]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
  "pytest-repeat>=0.9.3",
  "grpcio-tools>=1.66.1",
  "grpcio-testing>=1.66.1",
]


[tool.rye.workspace]
packages = [
  "foreverbull",
  "foreverbull_testing",
  "foreverbull_zipline",
  "example_algorithms",
]
dev-dependencies = [
  "yfinance>=0.1.87,<1.0.0",
  "pytest>=6.2.4,<7.0.0",
  "pytest-mock>=3.6.1,<4.0.0",
  "ruff<1.0.0",
  "black>=21.7b0,<30",
  "isort>=5.9.3,<6.0.0",
  "pytest-cov>=3.0.0,<4.0.0",
  "zipline-reloaded>=3.0.0,<4.0.0",
  "ta-lib>=0.4.26,<0.5.0",
  "testcontainers[postgres]",
]

[tool.ruff.lint]
exclude = ["foreverbull/src/foreverbull/pb/*"]

[tool.ruff.format]
exclude = ["foreverbull/src/foreverbull/pb/*"]

[tool.ruff]
fix = true
target-version = "py311"
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["foreverbull"]

[tool.pytest.ini_options]
testpaths = [
  "foreverbull/tests/",
  "foreverbull_testing/tests/",
  "foreverbull_zipline/tests/",
  "tests/",
]
filterwarnings = "ignore::DeprecationWarning"
