[project]
name = "foreverbull"
version = "0.0.1"
description = "foreverbull"
authors = [{ name = "Henrik Nilsson", email = "henrik@lhjnilsson.com" }]
dependencies = [
  "pydantic>=2.0.2,<3.0.0",
  "pynng>=0.8.0,<1.0.0",
  "minio>=7.1.14,<8.0.0",
  "pandas>=2.0.3,<3.0.0",
  "requests>=2.26.0,<3.0.0",
  "sqlalchemy>=2.0.19,<3.0.0",
  "psycopg2-binary>=2.9.1,<3.0.0",
  "click>=8.0.1,<9.0.0",
  "typer[all]>=0.9.0,<1.0.0",
  "cython>=3.0.0,<4.0",
  "docker>=7.0.0,<8.0.0",
  "pandas-datareader>=0.10.0,<1.0.0",
  "requests<2.32.0",
  "tables<3.9.2",
  # seems like 3.9.3 cant run on mac arm64
  "numpy<2.0.0",
  "setuptools>=70.2.0,<71.0.0",
  "protobuf==5.27.2",
  "types-protobuf>=5.27.0.20240626",
  "grpcio>=1.66.1",
]

[project.scripts]
foreverbull = "foreverbull.cli:cli"

[tool.rye]
dev-dependencies = [
  "yfinance>=0.1.87,<1.0.0",
  "pytest>=6.2.4,<7.0.0",
  "pytest-mock>=3.6.1,<4.0.0",
  "requests_mock>=1.9.3,<2.0.0",
  "ruff<1.0.0",
  "black>=21.7b0,<30",
  "isort>=5.9.3,<6.0.0",
  "pytest-cov>=3.0.0,<4.0.0",
  "zipline-reloaded>=3.0.0,<4.0.0",
  "ta-lib>=0.4.26,<0.5.0",
  "testcontainers[postgres]",
  "requests<2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foreverbull"]

[tool.hatch.build.targets.sdist]
packages = ["src/foreverbull"]
