[project]
name = "foreverbull_testing"
version = "0.0.1"
description = "foreverbull"
authors = [{ name = "Henrik Nilsson", email = "henrik@lhjnilsson.com" }]
dependencies = ["pytest", "testcontainers", "yfinance", "foreverbull"]

[project.entry-points.pytest11]
foreverbull = "foreverbull_testing.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/foreverbull"]
